<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/KiszedesMenuTextViewLehetosegek"
        android:actionLayout="@layout/actionbar_textview"
        app:showAsAction="ifRoom"
        android:title="" />

    <item
        android:id="@+id/KiszedesMenuItemFeloldas"
        android:title="@string/plan_feloldasa"
        app:showAsAction="never" />
    <item
        android:id="@+id/KiszedesMenuItemLezaras"
        android:title="@string/plan_lezaras"
        app:showAsAction="never" />

    <item
        android:id="@+id/KiszedesMenuItemKereses"
        android:title="@string/kereses"
        app:showAsAction="never" />

    <item
        android:id="@+id/KiszedesMenuItemReconnect"
        android:title="@string/ujracsatlakozas"
        app:showAsAction="never" />

</menu>
