<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/TextViewKeszletKivetJavitasCim"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/utoljara_kiadott_hossz_javitasa"
        android:textSize="25sp"
        android:gravity="center"
        android:textStyle="bold"
        android:layout_marginTop="5dp"/>

    <TextView
        android:id="@+id/TextViewKeszletKivetJavitas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/javitas_adatok"
        android:textSize="21sp"
        android:gravity="center"
        android:layout_marginTop="5dp"
        android:textColor="#969696"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/utoljara_kiadott_hossz"
            android:textSize="21sp"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginTop="5dp"
            android:textColor="#969696"/>

        <EditText
            android:id="@+id/EditTextDialogData"
            android:layout_width="100dp"
            android:textSize="19sp"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:layout_marginTop="10dp"
            tools:ignore="Autofill" />

    </LinearLayout>

    <Button
        android:id="@+id/btnOK"
        android:layout_gravity="center"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginBottom="5dp"
        android:text="@string/mehet"/>

</LinearLayout>