<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:windowSoftInputMode="stateAlwaysHidden">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/szovet_keresese"
        android:textSize="25sp"
        android:gravity="center"
        android:textStyle="bold"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/allapot"
            android:layout_marginStart="10dp"
            android:textSize="20sp"
            android:textStyle="bold"/>

        <Spinner
            android:id="@+id/SpinnerPlanSzedesAllapot"
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:descendantFocusability="blocksDescendants"
            android:drawSelectorOnTop="true"
            android:textAlignment="center"
            android:layout_gravity="bottom"
            android:gravity="center"
            android:entries="@array/allapot"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bin"
            android:layout_marginStart="10dp"
            android:textSize="20sp"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/EditTextKeresesBin"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:autofillHints="Üzenet"
            android:gravity="center"
            android:textColor="#ffffff"
            tools:targetApi="o"
            android:layout_marginStart="10dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cikkszam"
            android:layout_marginStart="10dp"
            android:textSize="20sp"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/EditTextKeresesCikkszam"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:autofillHints="Üzenet"
            android:gravity="center"
            android:textColor="#ffffff"
            tools:targetApi="o"
            android:layout_marginStart="10dp"/>

    </LinearLayout>

    <Button
        android:id="@+id/btnKeresesMehet"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/kereses"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"/>

</LinearLayout>